# travis-docker-glue

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  deploy.enc  dir_68267d1309a1af8e8297ef4c3efbcdba.html  fedora  files.html  globals.html  globals_func.html  index.html  libmym_8h.html  libmym_8h_source.html  newtan_8c.html  ubuntu
doc/: .gitignore  CMakeLists.txt  Doxyfile.cmakein
docker/: Dockerfile
html/search/: all_1.js  files_0.js  files_1.js  functions_0.js  searchdata.js
src/: .gitignore  CMakeLists.txt  libmym.h  libmym.pc.in  newtan.c
tests/: .gitignore  CMakeLists.txt  test.c
